@@ -1,57 +1,70 @@
 package newodoo;
 
-import org.springframework.boot.autoconfigure.security.oauth2.resource.OAuth2ResourceServerProperties;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.convert.converter.Converter;
+import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.jwt.JwtClaimNames;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.stereotype.Component;
+import org.springframework.security.oauth2.jwt.Jwt;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Component
 public class JwtAuthConverter implements Converter<Jwt, AbstractAuthenticationToken> {
 
-    private JwtAuthenticationConverter jwtAuthenticationConverter;
-    private JwtGrantedAuthoritiesConverter jwtGrantedAuthoritiesConverter;
-    private final JwtAuthConverterProperties properties;
+    private final JwtGrantedAuthoritiesConverter jwtGrantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
 
-    public JwtAuthConverter(JwtAuthConverterProperties properties) {
-        this.jwtAuthenticationConverter = new JwtAuthenticationConverter();
-        this.jwtGrantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
-        this.properties = properties;
-    }
+    @Value("${jwt.auth.converter.principle-attribute}")
+    private String principleAttribute;
+    @Value("${jwt.auth.converter.resource-id}")
+    private String resourceId;
     @Override
-    public AbstractAuthenticationToken convert(Jwt source) {
-        return null;
+    public AbstractAuthenticationToken convert(@NonNull Jwt jwt) {
+        Collection<GrantedAuthority> authorities = Stream.concat(
+                jwtGrantedAuthoritiesConverter.convert(jwt).stream(),
+                extractResourceRoles(jwt).stream()
+        )
+                .collect(Collectors.toSet());
+        return new JwtAuthenticationToken(
+                jwt,
+                authorities,
+                getPrincipleClaimName(jwt)
+        );
     }
-
-    private String getPrincipalClaimName(Jwt jwt) {
+    private String getPrincipleClaimName(Jwt jwt){
         String claimName = JwtClaimNames.SUB;
-        if (properties.getPrincipalAttribute() != null) {
-            claimName = properties.getPrincipalAttribute();
+        if(principleAttribute != null){
+            claimName = principleAttribute;
         }
         return jwt.getClaim(claimName);
     }
 
-    private Collection<GrantedAuthority> extractResourceRoles(Jwt jwt) {
-        Map<String, Object> resourceAccess = jwt.getClaim("resource_access");
+    private Collection<? extends GrantedAuthority> extractResourceRoles(Jwt jwt) {
+        Map<String, Object> resourceAccess;
         Map<String, Object> resource;
         Collection<String> resourceRoles;
-        if (resourceAccess == null
-                || (resource = (Map<String, Object>) resourceAccess.get(properties.getResourceId())) == null
-                || (resourceRoles = (Collection<String>) resource.get("roles")) == null) {
-            return Collections.emptySet();
+        if (jwt.getClaim("resource_access") == null){
+            return Set.of();
         }
+        resourceAccess = jwt.getClaim("resource_access");
+        if (resourceAccess.get(resourceId) == null){ //dovrebbe essere il client id questo
+            return Set.of();
+        }
+        resource = (Map<String, Object>) resourceAccess.get(resourceId);
+        resourceRoles = (Collection<String>) resource.get("roles");
+
         return resourceRoles.stream()
                 .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
                 .collect(Collectors.toSet());
+
     }
 }
